--- a/info.plist
+++ b/info.plist
@@ -12,5 +12,16 @@
 	<string>Golang Bundle</string>
 	<key>uuid</key>
 	<string>6A0ED627-48ED-4660-8F19-9E1D09800714</string>
+    <key>mainMenu</key>
+    <dict>
+        <key>items</key>
+        <array>
+            <string>639815B4-960C-41F1-849D-8C22A73E35F8</string>
+            <string>4D70D1FF-B1A1-456D-AEEF-3492E276BA3B</string>
+            <string>------------------------------------</string>
+            <string>E6366605-E32A-4FA8-B2C4-ECA2CC2E8C20</string>
+            <string>------------------------------------</string>
+        </array>
+    </dict>
 </dict>
 </plist>
