--- a/info.plist
+++ b/info.plist
@@ -21,6 +21,8 @@
             <string>------------------------------------</string>
             <string>E6366605-E32A-4FA8-B2C4-ECA2CC2E8C20</string>
             <string>------------------------------------</string>
+            <string>653A1CC6-38A3-4726-A2ED-BD5CD3BDA0B8</string>
+            <string>------------------------------------</string>
         </array>
     </dict>
 </dict>
